@@ -193,6 +193,7 @@ Older versions than 3.0 can be found at http://svn.communesplone.org/svn/commune
   other MeetingConfigs.  Added ToolPloneMeeting.performCustomWFAdaptations to manage custom WFAdaptations instead of
   monkeypatching adaptations.performWorkflowAdaptations.  WFAdaptations are now applied when the MeetingConfig is saved, no
   need to reinstall the package
+- Added method MeetingItem._adviceDelayIsTimedOut that returns True if given groupId advice delay is timed out
 
 3.3 (2015-02-27)
 ----------------
